--- a/package.json
+++ b/package.json
@@ -21,8 +21,20 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/router-store": "^4.0.4",
+    "@ngrx/store": "^4.0.3",
+    "@ngrx/store-devtools": "^4.0.0",
+    "angular2-fusioncharts": "^1.0.2-rc.5",
+    "angular2-infinite-scroll": "^0.3.5",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "github:fortawesome/Font-Awesome",
+    "jquery": "^3.2.1",
+    "ng2-google-place-autocomplete": "^1.4.2",
+    "ng2-password-strength-bar": "^1.1.3",
     "rxjs": "^5.4.2",
+    "ts-serializer": "^1.0.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -31,7 +43,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.88",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
